# custom_agents

./: .gitignore  AGENTS.md  README.md  pyproject.toml
agents/retrorabbit_code_reviewer/: agent.yaml  agent.yaml.example  instructions.md
src/shared_agents/: __init__.py  discover.py  harnesses.py  linker.py  main.py  manifest.py  schema.py  selection.py  tui.py
src/shared_agents/generators/: __init__.py  claude.py  codex.py  copilot.py  cursor.py  gemini.py  opencode.py  skills.py  tprompt.py
tests/: conftest.py  test_cli.py  test_discover.py  test_generators.py  test_harnesses.py  test_linker.py  test_schema.py  test_selection.py  test_tui.py
tests/fixtures/full-agent/: agent.yaml  instructions.md
tests/fixtures/minimal-agent/: agent.yaml  instructions.md
tests/fixtures/tprompt-agent/: agent.yaml  instructions.md
